# RepoMiner

./: README.md  dashApp.py  forms.py  main.py  pyproject.toml  repoManager.py  repoMiner.py
data/: commit.py  file.py  matchedFiles.py  methods.py  modificationTypes.py  parameters.py  types.py
static/: main.css  main.js  visualization.js
templates/: base.html  main.html
utils/: helper.py  parsing.py  visualization.py
