[tool.poetry]
name = "repominer"
version = "0.1.0"
description = ""
authors = ["Sebastian Simon <Bastisimon95@googlemail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
PyDriller = "^2.1"
Flask = "^2.2.2"
plotly = "^5.10.0"
dash = "^2.6.2"
javalang = "^0.13.0"
python-Levenshtein = "^0.20.7"
lizard = "^1.17.10"
python-dateutil = "^2.8.2"
pandas = "^1.5.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
