[tool.poetry]
name = "repominer"
version = "0.1.0"
description = ""
authors = ["Sebastian Simon <Bastisimon95@googlemail.com>"]

[tool.poetry.dependencies]
python = ">=3.10,<3.14"
Flask = "^2.3.3"
Flask-WTF = "^1.2.1"
WTForms = "^3.1.2"
PyDriller = "^2.5.0"
plotly = "^5.21.0"
dash = "^2.17.0"
javalang = "^0.13.0"
lizard = "^1.17.10"
python-dateutil = "^2.9.0.post0"
pandas = "^2.2.2"
numpy = "^1.26.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
